<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travigator</string>
    <string name="action_settings">Settings</string>
    <string name="DirName">Favorites</string>

    <string name="appMode">Choose app mode</string>
    <string-array name="appModeArray">
        <item>Normal Mode</item>
        <item>Ease-of-access Mode</item>
    </string-array>

    <string name="chooseFav">Choose route from your Favorites: </string>
    <string name="favNotFound">No favorite found.</string>
    <string name="chooseNet">Choose route from our Servers: </string>

    <string name="selectCity">Please select a city</string>
    <string name="selectRoute">Please select a route</string>
    <string name="selectStop">Please select stop</string>
    <string name="selectDestStop">Please select destination stop</string>
    <string name="selectSrcStop">Please select source stop</string>
    <string name="cityFirst">Please select city first</string>
    <string name="routeFirst">Please select route first</string>

    <string name="Loading">Loading...</string>
    <string name="loadingCity">Please wait...\nLoading cities...</string>
    <string name="loadingRoute">Please wait...\nLoading routes...</string>
    <string name="loadingStop">Please wait...\nLoading stops...</string>
    <string name="loadingData">Please wait...\nLoading route data...</string>
    <string name="addingFav">Please wait...\nAdding to Favorites...</string>

    <string name="emptyIP">IP Address can\'t be empty!</string>
    
    <string name="easySelectCity">Click here to select city.</string>
    <string name="easySelectRoute">Click here to select route.</string>
    <string name="easySelectSrc">Click here to select source stop.</string>
    <string name="easySelectDest">Click here to select destination stop.</string>
    <string name="easyPrevChoice">Change previous choice.</string>

    <string name="easyWelcome">You have selected ease of access mode.</string>
    <string name="easyGuideCity">We are trying to detect your city. Please wait. Or manually select city by tapping in the upper half of the screen.</string>
    <string name="easyGuideRoute">Tap in the upper half of the screen to select bus route number. Routes passing through your stop have been placed on the top of the list.</string>
    <string name="easyGuideSrc">We are trying to detect your source bus stop. Please wait. Or manually select your source stop by tapping in the upper half of the screen.</string>
    <string name="easyGuideDest">Tap in the upper half of the screen to select your deboarding bus stop. After choosing your destination tap in lower center of the screen to start navigation.</string>

    <string name="button_stop">Stop</string>
    <string name="button_navigate">Start\nNavigation</string>
    <string name="button_view">View Route</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_addFav">Add route to\n Favorites</string>
    <string name="button_chooseFav">Choose from\n Favorites</string>
    <string name="button_remFav">Remove from\nFavorites</string>
    <string name="button_chooseNet">Choose from\n Net</string>
    <string name="button_speechOff">Turn Off Speech</string>
    <string name="button_speechOn">Turn On Speech</string>
    <string name="button_speakAgain">Speak Again!</string>

    <string name="loc_unav">Location Unavailable! Please turn on Location Services</string>
    <string name="loc_av">Your current location is: </string>
    <string name="loc_acc">Your location is accurate to: </string>
    <string name="searchLoc">Fetching location...</string>

    <string name="loc__decode_fail">Failed to decode location.</string>
    <string name="autoselect_fail">Failed to automatically select city based on your location.</string>

    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="gps_unav">GPS Unavailable! Please come out in the open</string>
    <string name="gps_temp_unav">GPS Temporarily Unavailable! Please Wait</string>
    <string name="gps_av">GPS Now Available</string>

    <string name="thisStop">This Stop is: </string>
    <string name="nextStop">Next Stop is: </string>
    <string name="lastStop">This is the last stop</string>
    <string name="sameSrcDest">The source stop is same as the deboarding stop. Don\'t get on the bus!</string>

    <string name="parentKey">com.frodo.travigator.PARENT_KEY</string>
    <string name="appModePref">com.frodo.travigator.sharedPref.APP_MODE</string>
    <string name="google_api_key">AIzaSyDWG1FdZv4f-4Fbvx8SqY15BoXRi9aiswU</string>

</resources>

