<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

  <!--  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseFav"
        android:textSize="19sp" />
-->
    <TextView
        android:id="@+id/favText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/easySelectCity"
        android:textSize="22sp"
        android:gravity="center"
        android:visibility="visible"
        android:clickable="true" />

    <Spinner
        android:id="@+id/cityFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/routeFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/srcStopFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/stopFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="gone" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrevChoice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/easyPrevChoice"
            android:enabled="false" />

        <Button
            android:id="@+id/buttonNavigate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_navigate"
            android:enabled="false" />

        <Button
            android:id="@+id/buttonRemFav"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_remFav" />

    </LinearLayout>

</LinearLayout>